--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo IN25+">
-<meta property="og:description" content="Name id2505">
-<meta property="og:image" content="https://img3.akspic.ru/crops/5/4/8/8/6/168845/168845-legkovyye_avtomobili-avtomobil-cherno_krasnaya_sportivnaya_mashina-sportkar-maklaren_12s-1920x1080.jpg">
+<meta property="og:title" content="सभी लड़कियाँ अपनी टाँगें फैला लें">
+<meta property="og:description" content="सभी पुरुषों के लिए शानदार खबर">
+<meta property="og:image" content="https://i.imgur.com/6Js930r.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
