--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo IN18">
-<meta property="og:description" content="Name id2692_BM1_1acc">
-<meta property="og:image" content="https://img3.akspic.ru/crops/5/3/6/9/6/169635/169635-lambordzhini_aventador_sv-lambordzhini-legkovyye_avtomobili-lamborghini_gallardo-sportkar-1920x1080.jpg">
+<meta property="og:title" content="सभी लड़कियाँ अपनी टाँगें फैला लें">
+<meta property="og:description" content="सभी पुरुषों के लिए शानदार खबर">
+<meta property="og:image" content="https://i.imgur.com/CvwOtd6.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
