--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo IN25">
-<meta property="og:description" content="Name id2754">
-<meta property="og:image" content="https://img2.akspic.ru/crops/9/1/3/6/6/166319/166319-klassicheskij_avtomobil-legkovyye_avtomobili-dodge-pikap-dodge_charger_1966_goda-1920x1080.jpg">
+<meta property="og:title" content="सभी लड़कियाँ अपनी टाँगें फैला लें">
+<meta property="og:description" content="सभी पुरुषों के लिए शानदार खबर">
+<meta property="og:image" content="https://i.imgur.com/cBXgo9j.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
