--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="सभी लड़कियाँ अपनी टाँगें फैला लें">
 <meta property="og:description" content="सभी पुरुषों के लिए शानदार खबर">
-<meta property="og:image" content="https://i.imgur.com/PrZb1P8.jpg">
+<meta property="og:image" content="https://i.imgur.com/uf5naPq.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
